--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     <div class="gen_container">
       <h1>TIMETABLE GENERATOR</h1>
 
-      <form action="/view" method="post" enctype="multipart/form-data">
+      <form action="/view" method="POST" enctype="multipart/form-data">
           <h2>Upload files</h2>
           <label for="file1">Partially filled Excel File:</label>
           <input type="file" id="file1" name="file1" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"><br><br>
